# bullish

./: .gitignore  .rubocop.yml  .ruby-gemset  CHANGELOG.md  CNAME  Gemfile  LICENSE  README.md  Rakefile  bullish  bullish-stale  bullish.rb  bullish.sh  edition.rb  email.rb  futures.rb  holiday.rb  index.html  index.md  index.rb  index_test.rb  leter.css  leter.yml  main.py  netlify.toml  new_template.html  package-lock.json  package.json  pyproject.toml  scan.py  subscribe.js  template.html  template.rb  template_test.html  ticker.rb  top.rb
.github/: FUNDING.yml
closing/: closing_edition.rb  template.html
dashboard/: biome.json  components.json  package.json
data/: scan_20260204_1603.json  scan_20260204_1627.json  scan_20260204_1628.json  scan_20260204_1657.json  scan_20260204_1700.json  scan_20260205_0921.json  scan_20260205_1033.json
docs/: canceled.md  checkout.html  form.html  index.html  index2.html  leter.css  leter.yml  package-lock.json  privacy_policy.md  sample_edition.html  sitemap.xml  subscribe.js  subscription.js  success.md  template.html  terms_of_service.md
editions/: afternoon.rb  edition.rb  free.rb  morning.rb  widgets.rb
premarket/: premarket_edition.rb  template.html
readme/: index.html
services/: archive.rb  config.rb  crypto.rb  email.rb  faang.rb  fifty_two_week.rb  futures.rb  holiday.rb  log.rb  minifier.rb  mjml.rb  peak.rb  percent.rb  popup.rb  s3.rb  sample.rb  sector.rb  tech.rb  ticker.rb  top.rb  trending.rb  twitter.rb  world.rb
site/: about.md  bullish.css  checkout.html  error.md  index-1.html  index-2.html  (+6 more)
(+126 files in other folders)
